@@ -1,0 +1,3 @@
+package SPVM::IO::Stdin {
+
+}
