@@ -261,7 +261,7 @@ package TestCase::Lib::SPVM::IO::File {
     return 1;
   }
 
-  sub test_readline_chompr : int ($file : string) {
+  sub test_readline_chomp_lf : int ($file : string) {
     my $fh = SPVM::IO::File->open($file, "r");
     unless ($fh) {
       die "Can't open file $file";
@@ -269,7 +269,7 @@ package TestCase::Lib::SPVM::IO::File {
     
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line eq "abcd") {
         return 0;
       }
@@ -277,7 +277,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line eq "fghi") {
         return 0;
       }
@@ -285,7 +285,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line eq "klm") {
         return 0;
       }
@@ -293,7 +293,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line == undef) {
         return 0;
       }
@@ -301,7 +301,7 @@ package TestCase::Lib::SPVM::IO::File {
     return 1;
   }
 
-  sub test_readline_chompr_while : int ($file : string) {
+  sub test_readline_chomp_lf_while : int ($file : string) {
     my $fh = SPVM::IO::File->open($file, "r");
     unless ($fh) {
       die "Can't open file $file";
@@ -309,7 +309,7 @@ package TestCase::Lib::SPVM::IO::File {
     
     my $lstrings = SPVM::StringList->new;
     while (my $line = $fh->readline) {
-      $line = chompr($line);
+      $line = chomp_lf($line);
       $lstrings->push($line);
     }
     my $strings = $lstrings->to_array;
@@ -321,7 +321,7 @@ package TestCase::Lib::SPVM::IO::File {
     return 1;
   }
 
-  sub test_readline_chompr_eof : int ($file : string) {
+  sub test_readline_chomp_lf_eof : int ($file : string) {
     my $fh = SPVM::IO::File->open($file, "r");
     unless ($fh) {
       die "Can't open file $file";
@@ -329,7 +329,7 @@ package TestCase::Lib::SPVM::IO::File {
     
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line eq "abcd") {
         return 0;
       }
@@ -337,7 +337,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line eq "fghi") {
         return 0;
       }
@@ -345,7 +345,7 @@ package TestCase::Lib::SPVM::IO::File {
     
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line eq "") {
         return 0;
       }
@@ -353,7 +353,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line eq "klm") {
         return 0;
       }
@@ -361,7 +361,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line == undef) {
         return 0;
       }
@@ -369,7 +369,7 @@ package TestCase::Lib::SPVM::IO::File {
     return 1;
   }
 
-  sub test_readline_chompr_long_line : int ($file : string) {
+  sub test_readline_chomp_lf_long_line : int ($file : string) {
     my $fh = SPVM::IO::File->open($file, "r");
     unless ($fh) {
       die "Can't open file $file";
@@ -377,7 +377,7 @@ package TestCase::Lib::SPVM::IO::File {
     
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line eq "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa") {
         return 0;
       }
@@ -385,7 +385,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line eq "fghi") {
         return 0;
       }
@@ -393,7 +393,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line eq "klm") {
         return 0;
       }
@@ -401,7 +401,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $fh->readline;
-      $line = chompr($line);
+      $line = chomp_lf($line);
       unless ($line == undef) {
         return 0;
       }
