@@ -1,6 +1,8 @@
 0.0444 2019-11-12
   - remove no needed SPVM::IO::File::EOF
   - rename SPVM::FileHandle to SPVM::IO::FileHandle
+  - rename chompr to chomp_lf
+  - add chomp_crlf
 0.0443 2019-11-08
   - warn become keyword and add file and line number to the last of the message.
   - rename many Native APIs
